# MLOps-LLMOps-CaseStudies

./: .gitignore  README.md
Customer_Service_Request_Classification_System/: .gitignore  README.md  docker-compose.yaml  main.py  models.py  requirements.txt
Customer_Service_Request_Classification_System/src/: db_operations.py  main.py
FasAPI-CRUD-with-mySQL/: .gitignore  README.md  docker-compose.yaml  requirements.txt
FasAPI-CRUD-with-mySQL/src/: database.py  main.py  models.py  security.py  seed_data.py
ML_Pipelines_CHURN/: Dockerfile  README.md  main.py  pyproject.toml
ML_Pipelines_CHURN/app/: main.py  train_model.py
ML_Pipelines_CHURN/notebooks/: ML_Pipelines_CHURN.ipynb
TaxiTripAPI/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
TaxiTripAPI/app/: database.py  main.py  models.py  schemas.py
TaxiTripAPI/reports/: test-report.txt
TaxiTripAPI/scripts/: bulk_insert.sh  db.sh  fastapi.sh  reset-all.sh  run-all.sh  test_api.sh
fastapi_postgresql_integration/: database.py  docker-compose.yaml  main.py  models.py  pyproject.toml  requirements.txt  train_advertising_model.py  train_iris_model.py
fastapi_postgresql_integration/routers/advertising/: advertising_ep.py
fastapi_postgresql_integration/routers/iris/: iris_ep.py
fastapi_postgresql_integration/routers/llm/: llm_ep.py
fastapi_postgresql_integration/saved_models/: 01.knn_with_iris_dataset.pkl  02.iris_label_encoder.pkl  03.randomforest_with_advertising.pkl
price_helper/: .gitignore  Dockerfile  README.md  app.py  main.py
price_helper/tests/: test_app.py
(+12 files in other folders)
